tests/Errors/Class.jack
class Class {
} this stuff shouldn't be here
